@@ -16,10 +16,11 @@
 - added: `NOSQLMEMORY(dbName, [viewName])` enables in-memory database collection
 - added: NoSQL `nosql.upsert(doc)` inserts a new document where document doesn't exist in DB
 - added: NoSQL `nosql.release()` for releasing of in-memory DB (framework clears unused in-memory databases automatically)
+- added: NoSQL `nosql.scalar(type, dbName, [view])` performs scalar operation by type: `sum`, `min`, `max`, `avg`, `count` or `group`
 - added: NoSQL `nosql.binary.all(callback)` browses all stored files
 - added: NoSQL `DatabaseBuilder.join(field, dbName, [view])` returns `DatabaseBuilder` with updated `.where(field_JoinedDB, field_currentdb)` method (it supports `.fields()` too)
 - added: NoSQL `DatabaseBuilder.join()` supports scalar operation too, e.g. `nosql.join(...).scalar('count')`
-- added: NoSQL `DatabaseBuilder.scalar(type, [field])` - types: `sum`, `min`, `max`, `avg` and `count`
+- added: NoSQL `DatabaseBuilder.scalar(type, [field])` - types: `sum`, `min`, `max`, `avg`, `count` or `group`
 - added: NoSQL `DatabaseBuilder.month(field, [operator], value)` filters `Date` fields according its month number
 - added: NoSQL `DatabaseBuilder.year(field, [operator], value)` filters `Date` fields according its year number
 - added: NoSQL `DatabaseBuilder.day(field, [operator], value)` filters `Date` fields according its day number
